# lib/api-spec/openapi.yaml
@@ -1018,6 +1018,8 @@ components:
           type: string
         budget_amount:
           type: number
+        is_recurring:
+          type: boolean
         category_name:
           type: string
           nullable: true
@@ -1042,6 +1044,8 @@ components:
           type: string
         budget_amount:
           type: number
+        is_recurring:
+          type: boolean
       required:
         - category_id
         - month
